zabbix-server/zabbix-web/service/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zabbix-web-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`zabbix.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: httpsredirect
    - name: ipwhitelist-privnets
    services:
    - name: zabbix-web-svc
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zabix-web-https
spec:
  entryPoints:
    - websecure
  tls:
    secretName: secret-zabbix-k8s-lenin-nu
  routes:
  - match: Host(`zabbix.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: ipwhitelist-privnets
    services:
    - name: zabbix-web-svc
      port: 80
